eks-cluster-karpenter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: softwarestack-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: www.softwarestack.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-app-service
                port:
                  number: 80
